# callstack

./: .claudeignore  .gitignore  CLAUDE.md  Makefile  README.md  callstack-schema.json  generate-icons.py  sample_postman_collection.json
.github/workflows/: build.yml  update-homebrew.yml
docs/: CNAME  index.html
docs/assets/css/: styles.css
docs/assets/js/: main.js
docs/docs/: index.html
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
samples/: Sample.callstack.json  products.csv
scripts/: set-release-version.js  set-release-version.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  http_client.rs  lib.rs  main.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: index.html  manifest.json
web/src/: App.js  App.module.css  App.tsx  env.d.ts
web/src/components/AutomationView/: AutomationView.module.css  AutomationView.tsx
web/src/components/ConfirmModal/: ConfirmModal.js  ConfirmModal.module.css  ConfirmModal.tsx
web/src/components/CookieView/: CookieView.module.css  CookieView.tsx
web/src/components/DataFileView/: DataFileView.module.css  DataFileView.tsx
web/src/components/EnvModal/: EnvModal.js  EnvModal.module.css  EnvModal.tsx
web/src/components/EnvironmentView/: EnvironmentView.module.css  EnvironmentView.tsx
web/src/context/: AppContext.js  AppContext.tsx
web/src/hooks/: useAccentTheme.ts  useAuth.js  useAuth.ts  useAutomationRunner.ts  useDatabase.js  useDatabase.ts  useEditorMemory.ts  useHttpClient.js  useHttpClient.ts  useScriptRunner.ts  useSettings.ts  useShortcuts.ts  useTheme.js  useTheme.ts
web/src/lib/: callstackSchema.ts  envUtils.ts  formatBody.ts  jwt.js  jwt.ts  parseCsv.ts  secrets.ts  template.js  template.ts  templateTokens.ts  types.ts  utils.js  utils.ts
web/src/styles/: global.css  tokens.css
web/src/utils/: callstackArchive.ts  postmanParser.ts
(+81 files in other folders)
