[package]
name = "callstack"
version = "0.1.0"
description = "A modern REST API testing tool"
authors = ["Kinarix"]
edition = "2021"

[lib]
name = "callstack_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "callstack"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "multipart"], default-features = false }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
rfd = "0.15"
