[package]
name = "callstack"
version = "0.7.5"
description = "A modern REST API testing tool"
authors = ["Kinarix"]
edition = "2021"

[lib]
name = "callstack_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "callstack"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "multipart"], default-features = false }
base64 = "0.22"
rusqlite = { version = "0.39", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
rfd = "0.17"
arboard = { version = "3", default-features = false }

[profile.release]
strip = true        # remove debug symbols from binary
opt-level = "z"     # optimise for size (vs "3" for speed)
lto = true          # link-time optimisation — removes dead code across crates
codegen-units = 1   # single codegen unit for maximum LTO effectiveness
panic = "abort"     # smaller binary, no unwinding tables
